@@ -173,6 +173,9 @@
      [nchan.c]
      correct fn names for ssh2, do not switch from closed to closed; 
      ok provos@
+   - markus@cvs.openbsd.org 2002/01/14 13:41:13
+     [nchan.c]
+     remove duplicated code; ok provos@
 
 20020121
  - (djm) Rework ssh-rand-helper:
